@@ -1,5 +1,9 @@
 2011-06-27  Jason Merrill  <jason@redhat.com>
 
+	PR c++/49528
+	* g++.dg/init/ref19.C: New.
+	* g++.dg/cpp0x/constexpr-cleanup.C: New.
+
 	PR c++/49440
 	* g++.dg/rtti/anon-ns1.C: New.
 
