@@ -1,5 +1,11 @@
 2011-06-27  Jason Merrill  <jason@redhat.com>
 
+	PR c++/49528
+	* semantics.c (potential_constant_expression_1): A TARGET_EXPR
+	of non-literal type isn't constant.
+	(cxx_eval_constant_expression): Likewise.
+	* init.c (expand_default_init): Use maybe_constant_init.
+
 	PR c++/49440
 	* class.c (set_linkage_according_to_type): Hand off to
 	determine_visibility.
